did a lot: BFS works, but doesnt display path yet

--- a/pathProject/path.css
+++ b/pathProject/path.css
@@ -1,7 +1,15 @@
-#window{
-    border: 1px solid black;
+
+
+canvas{
+    border: 2px solid black;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 body{
     margin: 0;
+    float:center;
 }
