--- a/pathProject/path.css
+++ b/pathProject/path.css
@@ -7,9 +7,26 @@ canvas{
     margin-left: auto;
     margin-right: auto;
     display: block;
+    background-color: white;
 }
 
 body{
-    margin: 0;
-    float:center;
+    margin: 10;
+    background-color: aquamarine;
 }
+
+.under{
+    width: 100px;
+    position: relative;
+    border:none;
+    left: 500px;
+    top: 20px;
+    display: inline-block;
+    cursor: pointer;
+    padding: 10px 24px;
+    font-size: 10px;
+   
+ 
+}
+
+
