Probably should commit more. Did a lot of little things. Design is more concise, and DFS actually works correctly (hopefully). Added counters for path length and total cells visited

--- a/pathProject/path.css
+++ b/pathProject/path.css
@@ -1,7 +1,9 @@
 
 
+
 canvas{
     border: 2px solid black;
+    position:relative;
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
@@ -15,11 +17,19 @@ body{
     background-color: aquamarine;
 }
 
+#algorithms{
+    position: relative;
+    left: 730px;
+    top: 10px;
+   
+}
+
+
 .under{
     width: 100px;
     position: relative;
     border:none;
-    left: 500px;
+    left: 450px;
     top: 20px;
     display: inline-block;
     cursor: pointer;
